<resources>
    <string name="app_name">Simulation eCatalog</string>
    <string name="btn_info_dialog_close">Close</string>
    <string name="hd_dialog_title_error">Error</string>
    <string name="txt_unknown_error">Unknown error, Please check your internet connection</string>
    <string name="btn_yes">yes</string>
    <string name="btn_no">no</string>
    <string name="search">search</string>
    <string name="alert_message">Alert message</string>
    <string name="txt_search_length_error">Length must be more than 3 character</string>
    <string name="simulation">Simulation</string>
    <string name="txt_header_name">Header name</string>
    <string name="txt_description">Description</string>
    <string name="txt_color_simulation">Color simulation</string>
    <string name="category">category</string>
    <string name="txt_all_category">All category</string>
    <string name="txt_office">Office</string>
    <string name="txt_public">Public</string>
    <string name="txt_residential">Residential</string>
    <string name="txt_furniture">Furniture</string>
    <string name="txt_hotel">Hotel</string>
    <string name="txt_chain_store">Chain Store</string>
    <string name="txt_education">Education</string>
    <string name="txt_hospital">Hospital</string>

</resources>