<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentations.views.fragments.ScreenSlidePageFragment">

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/txt_header_name"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/txt_description"
        android:maxLines="2"
        android:ellipsize="end"
        app:layout_constraintTop_toBottomOf="@+id/tv_header"/>

    <LinearLayout
        android:id="@+id/layout_showImage"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description">

        <ImageView
            android:id="@+id/iv_original"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/exsimulation"
            android:visibility="visible"/>

        <ImageView
            android:id="@+id/iv_simulation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:background="@color/grey" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_imageCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/layout_showImage"
        android:layout_margin="20dp"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/txt_color_simulation" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_selectiveList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_imageCode"/>

</androidx.constraintlayout.widget.ConstraintLayout>